# feditest

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README-PyPI.md  README.md  RELEASE-HOWTO.md  REUSE.toml  feditest-default.json  feditest-demo1.json  feditest-demo2.json  feditest-imp.json  feditest-sandbox.json  hatch_build.py  pyproject.toml  site-mastodon.json  site-wordpress-plus-activitypub-plugin.json  sources-of-authority  wordpress.123.lan.ubos-backup
.github/workflows/: pre-commit.yml
docs/demo/: demo-script-milestone-1.txt
docs/plan/: diagrams.graffle  faq.md  index.md  test-suite-arch.graffle
src/: testrun.py
src/feditest/: __init__.py  account.py  accountmanager.py  ca.py  device.py  disabled.py  dns.py  registry.py  reporting.py  testplan.py  testrun.py  testruncontroller.py  testruntranscript.py  tests.py  utils.py
src/feditest/cli/: __init__.py  util.py  utils.py
src/feditest/iut/: __init__.py  activitypub.py  fediverse.py  web.py  webfinger.py
src/feditest/nodedrivers/: __init__.py  ubos.py
src/feditest/protocols/: __init__.py  activitypub.py  fediverse.py  sandbox.py  web.py  webfinger.py
src/feditest/templates/: metadata.jinja2  report-fragment.jinja2  report-standalone.jinja2  report.jinja2  session_details.jinja2  standalone-report-css-common.jinja2  test_matrix.jinja2  test_summary.jinja2  testresult-brief.jinja2  testresult-full.jinja2  testresult-single.jinja2  testrun-report-sequential-fragment.jinja2  testrun-report-sequential-standalone.jinja2  testrun-report-testmatrix-fragment.jinja2  testrun-report-testmatrix-standalone.jinja2  testrun-transcript-metadata.jinja2  testrun-transcript-sequential.jinja2  testrun-transcript-session-details.jinja2  testrun-transcript-summary.jinja2  (+1 more)
tests/: .gitignore  conftest.py  test_10_create_test_plan_constallation.py  test_10_register_nodedrivers.py  test_10_register_tests.py  test_20_create_test_plan_session_template.py  test_30_create_testplan.py  test_40_ubos_mastodon_accounts_from_testplan.py  test_50_sandbox.py  test_fallback_fediverse_accounts_from_testplan.py  test_feditest.py  test_grpc.py  test_mastodon_node.py  test_registry.py  test_report_node_driver_errors.py  test_rolemapping.py  test_tap.py
tests-imp/imp/: test_httpcomesup.py
tests-sandbox/sandbox/: __init__.py  test_1.py
tests.smoke/: README.md  imp.node.json  mastodon.saas.constellation.json  mastodon.saas.node.json  mastodon.ubos.constellation.json  mastodon.ubos.node.json  mastodon_api_mastodon_api.session.json  webfinger.session.json  wordpress.saas.constellation.json  wordpress.saas.node.json  wordpress.ubos.constellation.json  wordpress.ubos.node.json  wordpress_mastodon.ubos.constellation.json
tests.smoke/tests/: node_with_mastodon_api.py  nodes_with_mastodon_api_communicate.py  webfinger.py
tests.unit/: dummy.py  test_10_create_test_plan_constallation.py  test_10_register_nodedrivers.py  test_10_register_tests.py  test_10_registry.py  test_20_create_test_plan_session_template.py  test_30_create_testplan.py  test_40_fallback_fediverse_accounts_from_testplan.py  test_40_fallback_fediverse_accounts_with_roles_from_testplan.py  test_40_fallback_fediverse_accounts_without_roles_from_testplan.py  test_40_report_node_driver_errors.py  test_40_static_account_manager_fallback_fediverse_accounts.py  test_40_ubos_mastodon_accounts_from_testplan.py  test_50_run_assertion_raises.py  test_50_run_exceptions.py  test_50_run_multistep_assertion_raises.py  test_50_run_not_implemented.py  test_50_run_passes.py  test_50_run_skip.py  test_50_run_testplan_sandbox.py  test_50_transcript.py  test_60_use_manually_entered_application_name.py
tests.unit/feditest/: README.md  mastodon_api.session.json  mastodon_mastodon.py  mastodon_mastodon.ubos.constellation.json  node_with_mastodon_api.py  wordpress.ubos.constellation.json  wordpress_mastodon.ubos.constellation.json
tests.unit/unit/: mastodon_parameters.json  test_40_fallback_fediverse_accounts_from_testplan.py  test_40_ubos_mastodon_accounts_from_testplan.py
tests/activitypub/: __init__.py  test_fp_s_3_2__3_objects_must_be_the_same_when_accessed_with_get.py  test_s_4_1__1_actor_objects_must_have_an_inbox.py
tests/feditest/: mastodon_mastodon.py  mastodon_mastodon_ubos.json  mastodon_saas_api.json  mastodon_ubos_api.json  node_with_mastodon_api.py  wordpress_ubos_api.json
tests/fediverse/: __init__.py  test_follow.py
tests/imp/: __init__.py  test_httpcomesup.py
tests/pyunit/: test_40_fallback_fediverse_accounts_from_testplan.py  test_40_report_node_driver_errors.py  test_50_run_testplan_sandbox.py
tests/sandbox/: test_1.py
tests/unit/: test_20_create_test_plan_session_template.py  test_40_static_account_manager_fallback_fediverse_accounts.py
tests/webfinger/: __init__.py  test_client_4_2__1_client_accesses_correct_uri.py  test_client_4_2__6_client_must_accept_failure.py  test_client_4_4_client_always_provides_resource_uri.py  test_server_4_2__4_do_not_accept_malformed_resource_parameters.py  test_server_4_2__5_status_404_for_nonexisting_resources.py  test_server_4_2__8_server_serves_correct_content_type.py  test_server_4_3_server_only_returns_jrd_in_response_to_https_requests.py  test_server_4_4__1_valid_json.py
(+123 files in other folders)
