[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "feditest"
version = "0.0.2"
authors = [
  { name="Johannes Ernst", email="git@j12t.org" },
]
dependencies = [
  "httpx",
  "langcodes",
  "msgspec",
  "multidict",
  "jinja2",
  "pyhamcrest",
  "pytest",
  "grpcio",
  "grpcio-tools"
]

description = "Testing federated protocols"
readme = "README.md"
requires-python = ">=3.11" # type annotations changed in 3.9, @override in 3.12
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet",
    "Topic :: Software Development :: Testing"
]


[project.scripts]
feditest = "feditest.cli:main"


[project.urls]
"Fediverse Developer Network" = "https://fedidevs.org/"
Documentation = "https://fedidevs.org/projects/testing/feditest/"
Homepage = "https://github.com/fediverse-devnet/feditest"
Issues = "https://github.com/fediverse-devnet/feditest/issues"


[tool.hatch.build.targets.sdist]
exclude = [
    "docs/"
]

[tool.ruff]
line-length=120

[tool.pylint."MESSAGES CONTROL"]
max-line-length=120
disable="arguments-renamed, empty-docstring, global-variable-not-assigned, line-too-long, missing-class-docstring, missing-function-docstring, too-few-public-methods, too-many-arguments"


[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "DoNotCollect" # Is there a better way of doing this?
python_functions = "test_*"
