[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "feditest"
version = "0.3"
authors = [
  { name="Johannes Ernst", email="git@j12t.org" },
  { name="Steve Bate", email="svc-github@stevebate.net" }
]
maintainers = [
  { name="Johannes Ernst", email="git@j12t.org" },
  { name="Steve Bate", email="svc-github@stevebate.net" }
]
dependencies = [
  "cryptography",
  "httpx",
  "langcodes",
  "msgspec",
  "multidict",
  "jinja2",
  "pyhamcrest",
  "pytest",
  "mastodon.py"
]
description = "Testing federated protocols"
readme = "README-PyPI.md"
requires-python = ">=3.11" # type annotations changed in 3.9, @override in 3.12
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing"
]


[project.scripts]
feditest = "feditest.cli:main"


[project.urls]
Homepage = "https://feditest.org/"


[tool.hatch.build.targets.sdist]
exclude = [
    "docs/"
]


[tool.pylint."MESSAGES CONTROL"]
max-line-length=120
disable="arguments-renamed, empty-docstring, global-variable-not-assigned, line-too-long, missing-class-docstring, missing-function-docstring, too-few-public-methods, too-many-arguments"


[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "DoNotCollect" # Is there a better way of doing this?
python_functions = "test_*"
